var all the things! (and some other cleanup)